--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/app/Dockerfile
+    command: python djangosnippets/manage.py runserver 0.0.0.0:8000
     ports:
       - 8000:8000
     volumes:
@@ -19,7 +20,7 @@ services:
       - DB_PASSWORD
     depends_on:
       - db
-    tty: true
+    # tty: true
 
   db:
     image: postgres:14.1-alpine
